[FIX] web: Fix invisible icons in dropdown items
Some icons such as smalls "v" for selected dropdown items where not displayed
do to a too permissive css selector. This commit fixes that by making the
selector only affect SelectMenu components.

Task: 5003179

--- a/addons/web/static/src/core/select_menu/select_menu.scss
+++ b/addons/web/static/src/core/select_menu/select_menu.scss
@@ -65,10 +65,10 @@
             top: $dropdown-padding-y * -1;
         }
     }
-}
 
-.dropdown-menu:not(.o_bottom_sheet) .o-dropdown-item:before {
-    display: none;
+    &:not(.o_bottom_sheet) .o-dropdown-item:before {
+        display: none;
+    }
 }
 
 .o_bottom_sheet .o_select_menu_menu {
